--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-razzle-app",
   "version": "2.0.0-alpha.2",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "start": "rimraf build && razzle start",
     "build": "rimraf build && razzle build",
@@ -12,6 +13,7 @@
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1.4",
     "express": "4.16.3",
+    "json-server": "^0.12.2",
     "qs": "^6.5.1",
     "razzle": "0.8.14",
     "react": "16.3.2",
@@ -31,7 +33,7 @@
     "autoprefixer": "^8.3.0",
     "babel-preset-stage-0": "^6.24.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1"
   }
