--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "rimraf build && razzle start",
-    "build": "rimraf build && razzle build",
-    "test": "rimraf build && razzle test --env=jsdom",
+    "start": "razzle start",
+    "build": "razzle build",
+    "test": "razzle test --env=jsdom",
     "start:prod": "cross-env NODE_ENV=production node ./build/server.js"
   },
   "dependencies": {
