--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "razzle start",
     "build": "rimraf build && razzle build",
+    "postinstall": "razzle build",
     "test": "razzle test --env=jsdom",
     "start:prod": "cross-env NODE_ENV=production node ./build/server.js"
   },
