--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "razzle start",
+    "start:dev": "razzle start",
     "build": "rimraf build && razzle build",
     "postinstall": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "cross-env NODE_ENV=production node ./build/server.js"
+    "start": "NODE_ENV=production node ./build/server.js"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
